forgot to save. added saved notebook

--- a/Analytic Dataset/Address_Data/Pre_Geocode/Pre_Geocode.ipynb
+++ b/Analytic Dataset/Address_Data/Pre_Geocode/Pre_Geocode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "67dc2113",
    "metadata": {},
    "outputs": [],
@@ -34,8 +34,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "0c1887c0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('/Users/michaelwilliams/Documents/MGH T32/Research/AB/Analysis/AB_Rural/Analytic Dataset/Address_Data/Pre_Geocode/ActiveBrainsStudyDat_DATA_Full Address.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70bfbfbd",
    "metadata": {},
    "outputs": [],
    "source": []
